Update z-index of repo table headers to fix checkbox issue

--- a/frontend/src/Components/RepoList/RepoList.css
+++ b/frontend/src/Components/RepoList/RepoList.css
@@ -43,6 +43,7 @@
   position: -webkit-sticky;
   top: 4em;
   background-color: #fff;
+  z-index: 1;
 }
 
 .table-header th {
@@ -50,6 +51,7 @@
     position: sticky;
     position: -webkit-sticky;
     top: 0em;
+    z-index: 1;
 }
 
 thead th.default {
